--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.12.0",
@@ -22,8 +23,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.10.0",
     "react-native-ui-lib": "^7.6.0",
-    "react-redux": "^8.1.2",
-    "use-elapsed-time": "^3.0.4"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
